Server.fxml egin da eta horretarako server.css eratu da. Gradenlen aldaketak eman dira exekutagarria sortzeko.